fixed special chars

--- a/html/resources.html
+++ b/html/resources.html
@@ -27,7 +27,7 @@
 		<p>Below, you can see a checklist of the steps required to obtain reentry IDs:</p>
 
 		<input type="checkbox" >Retrieving Your Birth Certificate<br>
-		<input type="checkbox" >Obtaining Your Cal-ID or Driver's License<br>
+		<input type="checkbox" >Obtaining Your Cal-ID or Driver&#x27s License<br>
 		<input type="checkbox" >Obtaining Your Social Security Card<br> -->
 
 		<!-- Step 1 -->
@@ -42,14 +42,14 @@
 			Because of this, it cam be easier to have a close family member get your birth certificate, as they ecause family member can use their own ID to get it on your behalf.
 			Examples of close family members include:</br></br>
 
-		• Parents</br>
-		• Legal Guardians</br>
-		• Children</br>
-		• Grandparents</br>
-		• Grandchildren</br>
-		• Siblings</br>
-		• Spouses</br>
-		• Domestic Partners</p>
+		&middot Parents</br>
+		&middot Legal Guardians</br>
+		&middot Children</br>
+		&middot Grandparents</br>
+		&middot Grandchildren</br>
+		&middot Siblings</br>
+		&middot Spouses</br>
+		&middot Domestic Partners</p>
 
 		<p>
 			If you have any of these family members, we STRONGLY recommend asking them to help you obtain your birth certificate.
@@ -71,7 +71,7 @@
 
 		<a href="https://www.cdph.ca.gov/CDPH%20Document%20Library/ControlledForms/VS111.pdf" style="float: left;"><nobr> Mail in CA Forms are available here.</a><br>
 
-		<p>It costs $25 for a mail-in California form, while each county's form has its own cost. If you are homeless, you can fill out the following form for a fee waiver.
+		<p>It costs $25 for a mail-in California form, while each county&#x27s form has its own cost. If you are homeless, you can fill out the following form for a fee waiver.
 			Please note that this form must be signed by a homeless service provider. This includes transitional housing providers. Catholic Charities, parole, and probation may also be able to provide signed fee waivers.
 		</p>
 
@@ -85,9 +85,9 @@
 			New social security cards must be obtained in person at your local Social Security Office. </br>
 
 			You must have the following items if when you go to the office: </br> </br>
-			• Proof of citizenship (birth certificate or passport) </br>
-			• Proof of age (religious record made before the age of 5 showing your date of birth, US hospital record of your birth, or passport) </br>
-			• Proof of identity (MediCal card, U.S. military ID, certificate of naturalization, health insurance card, certified copy of medical record, or student ID/record)
+			&middot Proof of citizenship (birth certificate or passport) </br>
+			&middot Proof of age (religious record made before the age of 5 showing your date of birth, US hospital record of your birth, or passport) </br>
+			&middot Proof of identity (MediCal card, U.S. military ID, certificate of naturalization, health insurance card, certified copy of medical record, or student ID/record)
 		</p>
 
 			<p> If you are having trouble locating a Social Security Office, use this interactive map to find one near you! </p>
@@ -95,24 +95,24 @@
 
 		<p style="float: right;"><img src="../images/dl.png" height="250px" width="400px" ></p>
 
-		<h2>Step 3: Obtaining Your Cal-ID or Driver's License</h2>
+		<h2>Step 3: Obtaining Your Cal-ID or Driver&#x27s License</h2>
 
-		<p> There are two routes you can take when obtaining your driver's license or ID card: 1) going online, or 2) going in person. </br>
+		<p> There are two routes you can take when obtaining your driver&#x27s license or ID card: 1) going online, or 2) going in person. </br>
 			Below, you can find the details on whether you qualify for renewal online or if you need to go in person. </p>
 
 			<p> Note: You may NOT renew online if: </br></br>  1) you are not the person named on the renewal notice,
 			</br> 2) you want to change your name, address, or gender identity, or</br>  3) you want to change from a standard DL/ID to a REAL ID, Reduced Fee DL/ID, No Fee DL/ID, Senior ID, or Commercial DL </p>
 
-			<figure class="wp-block-table"><table><thead><tr><th>Category</th><th>Situation</th><th>Customer Action</th></tr></thead><tbody><tr><td data-title="Category">Drivers 70+ – non-commercial</td><td data-title="Situation">Beginning December 6, 2020, eligible to renew online or by mail for expirations March 2020 through the COVID-19 pandemic.</td><td data-title="Customer Action">Complete online renewal or renew by mail</td></tr><tr><td data-title="Category"><br>Drivers 69 and under</td><td data-title="Situation">Expanded eligibility to renew onlineor by mail for licenses expiring during the emergency.</td><td data-title="Customer Action">Submit online renewal application or renew by mail</td></tr><tr><td data-title="Category">First Time REAL ID</td><td data-title="Situation">Requires office visit.</td><td data-title="Customer Action"> Complete <a href="/portal/driver-licenses-identification-cards/dl-id-online-app-edl-44/">online application</a><br> Upload documents<br> No appointment necessary<br> Bring documents to office visit</td></tr><tr><td data-title="Category">REAL ID Renewal</td><td data-title="Situation">Can be completed online.</td><td data-title="Customer Action">No office visit required</td></tr><tr><td data-title="Category">Limited-term REAL ID renewal</td><td data-title="Situation"></td><td data-title="Customer Action">Requires an office visit</td></tr><tr><td data-title="Category">Driver’s License<br>Permits</td><td data-title="Situation">All permits expiring March 1, 2020 through May 31, 2021 are extended for six months or to a date 24 months from the date of application, whichever is earlier.</td><td data-title="Customer Action">No action necessary</td></tr><tr><td data-title="Category">Commercial License</td><td data-title="Situation">All commercial driver’s licenses, endorsements and commercial learner’s permits expiring between March 2020-February 2021 have an extension valid through February 28, 2021.</td><td data-title="Customer Action"> No action necessary</td></tr></tbody></table></figure>
+			<figure class="wp-block-table"><table><thead><tr><th>Category</th><th>Situation</th><th>Customer Action</th></tr></thead><tbody><tr><td data-title="Category">Drivers 70+ (non-commercial)</td><td data-title="Situation">Beginning December 6, 2020, eligible to renew online or by mail for expirations March 2020 through the COVID-19 pandemic.</td><td data-title="Customer Action">Complete online renewal or renew by mail</td></tr><tr><td data-title="Category"><br>Drivers 69 and under</td><td data-title="Situation">Expanded eligibility to renew onlineor by mail for licenses expiring during the emergency.</td><td data-title="Customer Action">Submit online renewal application or renew by mail</td></tr><tr><td data-title="Category">First Time REAL ID</td><td data-title="Situation">Requires office visit.</td><td data-title="Customer Action"> Complete online application<br> Upload documents<br> No appointment necessary<br> Bring documents to office visit</td></tr><tr><td data-title="Category">REAL ID Renewal</td><td data-title="Situation">Can be completed online.</td><td data-title="Customer Action">No office visit required</td></tr><tr><td data-title="Category">Limited-term REAL ID renewal</td><td data-title="Situation"></td><td data-title="Customer Action">Requires an office visit</td></tr><tr><td data-title="Category">Driver&#x27s License<br>Permits</td><td data-title="Situation">All permits expiring March 1, 2020 through May 31, 2021 are extended for six months or to a date 24 months from the date of application, whichever is earlier.</td><td data-title="Customer Action">No action necessary</td></tr><tr><td data-title="Category">Commercial License</td><td data-title="Situation">All commercial driver&#x27s licenses, endorsements and commercial learner&#x27s permits expiring between March 2020-February 2021 have an extension valid through February 28, 2021.</td><td data-title="Customer Action"> No action necessary</td></tr></tbody></table></figure>
 
 		<h4>Online</h4>
 
 		<p> If you are eligible to obtain your card online, use the following resources: </p>
 
-		<a href="https://www.dmv.ca.gov/wasapp/dlir/dlirApplication.do" style="float: left;">Start REAL ID Driver’s License Renewal</a><br>
-		<a href="https://www.dmv.ca.gov/wasapp/dlir/dlirApplication.do" style="float: left;">Start Driver’s License Renewal</a><br>
+		<a href="https://www.dmv.ca.gov/wasapp/dlir/dlirApplication.do" style="float: left;">Start REAL ID Driver&#x27s License Renewal</a><br>
+		<a href="https://www.dmv.ca.gov/wasapp/dlir/dlirApplication.do" style="float: left;">Start Driver&#x27s License Renewal</a><br>
 		<a href="https://www.dmv.ca.gov/wasapp/dlir/idApplication.do" style="float: left;">Start ID Card Renewal</a><br>
-		<a href="https://www.dmv.ca.gov/portal/dmv-virtual-office/commercial-driver-license-renewal/" style="float: left;">Start Commercial Driver’s License Renewal</a>
+		<a href="https://www.dmv.ca.gov/portal/dmv-virtual-office/commercial-driver-license-renewal/" style="float: left;">Start Commercial Driver&#x27s License Renewal</a>
 
 		<br>
 
@@ -120,10 +120,10 @@
 
 		<p>If you are renewing your ID in person, you will need to make sure you have the required documents.
 			Below, you can find a list of the documents you need: </br></br>
-			• Proof of identity (birth certificate or passport)</br>
-			• 2 California residency documents</br>
-			• Proof of your SSN</br>
-			• If your name is changing, you must also have a proof of name change document
+			&middot Proof of identity (birth certificate or passport)</br>
+			&middot 2 California residency documents</br>
+			&middot Proof of your SSN</br>
+			&middot If your name is changing, you must also have a proof of name change document
 		</p>
 
 		<p> If you are having trouble locating a DMV, use this interactive map to find one near you!</p>
