--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</h2>
 
 		<p>
-			Getting identification after prison shouldn't be hard. We're here to help
+			Getting identification after prison shouldn&#x27t be hard. We&#x27re here to help
 			you navigate the entire process in all counties in California. Please
 			view the "Guidelines" page for more information!
 
